# agents2-s7-browse-history-plugin

./: .gitignore  README.md  colab_example.ipynb  main.py  pyproject.toml  requirements.txt  setup.sh
backend/: chunking.py  export_to_colab.py  faiss_indexer.py  server.py
backend/agent/: action.py  agent.py  decision.py  logger.py  mcp_server_1.py  memory.py  perception.py
backend/indexer/: __init__.py  faiss_indexer.py
chrome-extension/: README.md  background.js  blocklist.json  content.js  manifest.json  popup.html  popup.js
faiss_index/: index.faiss  metadata.pkl
